--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./public/login.html"
+    "start": "parcel ./public/index.html"
   },
   "author": "sahan",
   "license": "ISC",
@@ -17,6 +17,9 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-router": "^5.0.0",
