--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/react-sidebar": "^3.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-sidebar": "^3.0.2"
   }
 }
